# rf-automation

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: api.yml  blank.yml  browser.yml  playwright.yml  python.yml
core/: master.resource
core/libraries/: external.resource  internal.resource
test_results/: log.html  output.xml  playwright-log.txt  report.html
tests/: __init__.robot  api.robot  basic.robot
tests/platform_health/api/: api.robot
tests/platform_health/frontend/: browser.robot
